main: fix (hero, logo) - Adjusted hero banner height and logo position for improved layout and alignment

--- a/atarashii-gakko/src/styles/components/_hero.scss
+++ b/atarashii-gakko/src/styles/components/_hero.scss
@@ -1,8 +1,8 @@
 .hero-banner {
-  height: 150vh;
+  height: 120vh;
   background-image: url("/assets/images/hero.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   background-repeat: no-repeat;
   display: flex;
   justify-content: flex-end;
